# ros2-LDPix

Practice02/install/: local_setup.sh  setup.sh
Practice02/install/task01/lib/task01/: receiver
Practice02/install/task01/share/task01/: package.dsv  package.ps1  package.sh  package.xml
Practice02/install/task01/share/task01/launch/: task01.launch.py
Practice02/install/task02/lib/task02/: publisher
Practice02/install/task02/share/task02/: package.dsv  package.ps1  package.sh  package.xml
Practice02/install/task02/share/task02/config/: task02.yaml
Practice02/install/task02/share/task02/launch/: task02.launch.py
Practice02/install/task03/lib/task03/: trigger_proxy
Practice02/install/task03/share/task03/: package.dsv  package.ps1  package.sh  package.xml
Practice02/install/task03/share/task03/config/: task03.yaml
Practice02/install/task03/share/task03/launch/: task03.launch.py
Practice02/log/: latest_build
Practice02/src/task01/: package.xml  setup.py
Practice02/src/task01/launch/: task01.launch
Practice02/src/task01/task01/: receiver.py
Practice02/src/task02/: setup.py
Practice02/src/task02/launch/: task02.launch
Practice02/src/task02/task02/: publisher.py
Practice02/src/task03/: setup.py
Practice02/src/task03/launch/: task03.launch
Practice02/src/task03/task03/: trigger_proxy.py
