<?xml version="1.0"?>
<package format="3">
    <name>task01</name>
    <version>0.0.0</version>
    <description>Task01 Receiver Node</description>

    <maintainer email="your_email@example.com">your_name</maintainer>
    <license>TODO</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
